--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
     "clean": "rimraf ./dist && rimraf ./*.vsix"
   },
   "dependencies": {
-    "azure-devops-extension-sdk": "^1.141.4",
+    "azure-devops-extension-sdk": "^1.141.5",
     "es6-promise": "^4.2.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "vss-ui": "^4.134.1"
+    "vss-ui": "^4.141.1"
   },
   "devDependencies": {
     "@types/react": "^16.3.2",
     "@types/react-dom": "^16.0.7",
     "css-loader": "~0.28.7",
+    "base64-inline-loader": "^1.1.1",
     "node-sass": "^4.0.0",
     "rimraf": "^2.5.4",
     "sass-loader": "~6.0.6",
