--- a/package.json
+++ b/package.json
@@ -13,17 +13,14 @@
     "url": "https://github.com/Microsoft/azure-devops-extension-sample.git"
   },
   "scripts": {
+    "clean": "rimraf ./dist",
+    "compile": "npm run clean && webpack --mode production",
+    "compile:dev": "npm run clean && webpack --mode development",
     "build": "npm run compile",
-    "build:prod": "npm run compile:prod",
-    "clean-dist": "rimraf ./dist",
-    "compile": "npm run clean-dist && webpack --config webpack.dev.js",
-    "compile:prod": "npm run clean-dist && webpack --config webpack.prod.js",
-    "prep": "cpx \"./src/Pages/**/*.html\" ./dist/",
-    "postbuild": "npm run package",
-    "postbuild:prod": "npm run package",
-    "package": "npm run prep && tfx extension create --rev-version --manifest-globs extension.json src/Pages/**/*.json",
-    "gallery-publish": "tfx extension publish",
-    "clean": "rimraf ./dist && rimraf ./*.vsix"
+    "build:dev": "npm run compile:dev && npm run postbuild",
+    "postbuild": "npm run package-extension -- --rev-version",
+    "package-extension": "tfx extension create --manifest-globs azure-devops-extension.json src/Pages/**/*.json",
+    "publish-extension": "tfx extension publish --manifest-globs azure-devops-extension.json src/Pages/**/*.json"
   },
   "dependencies": {
     "azure-devops-extension-sdk": "~2.0.2",
@@ -36,7 +33,7 @@
     "@types/react": "^16.3.2",
     "@types/react-dom": "^16.0.7",
     "base64-inline-loader": "^1.1.1",
-    "cpx": "~1.5.0",
+    "copy-webpack-plugin": "^4.5.4",
     "css-loader": "~1.0.0",
     "file-loader": "~2.0.0",
     "node-sass": "~4.9.4",
@@ -47,7 +44,6 @@
     "ts-loader": "~5.2.2",
     "typescript": "^2.9.2",
     "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-merge": "^4.1.4"
+    "webpack-cli": "^3.1.2"
   }
 }
