--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "publish-extension": "tfx extension publish --manifest-globs azure-devops-extension.json src/Pages/**/*.json"
   },
   "dependencies": {
-    "azure-devops-extension-api": "^0.142.4",
+    "azure-devops-extension-api": "~1.142.0",
     "azure-devops-extension-sdk": "~2.0.2",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "vss-ui": "~4.142.1"
+    "azure-devops-ui": "~1.142.0",
+    "react": "~16.3.2",
+    "react-dom": "~16.3.2"
   },
   "devDependencies": {
     "@types/react": "^16.3.2",
